--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /RayTracerChallenge/nbproject/
 /RayTracerChallenge/target/
 RayTracerChallenge/output-1692391981085.ppm
+RayTracerChallenge/output-1750189740466.ppm
